--- a/node-apps/internet_off_frontend/views/index.pug
+++ b/node-apps/internet_off_frontend/views/index.pug
@@ -2,19 +2,21 @@ extends layout
 
 block content
   div(class="flex justify-center")
-    div
-      div(class='flex justify-between rounded-t-xl to-light-teal-100 py-2')
-        h1.text-xl.flex.items-center.justify-center.font-bold.mx-2.text-light-blue-600= title
-        button(class='p-2 text-white text-sm font-extrabold rounded-md flex items-center justify-center bg-emerald-500 m-2')#refresh Refresh
-      table.table-auto
-        thead 
-          tr
-            th(class='px-4 py-2 text-light-blue-600') Start 
-            th(class='px-4 py-2 text-light-blue-600') End 
-            th(class='px-4 py-2 text-light-blue-600') TimeOut (in Minute)
-        tbody 
-          each val, key in offTime
+    div(class="relative")
+      div(class="absolute inset-0 bg-gradient-to-r from-cyan-400 to-light-blue-500 shadow-lg transform -skew-y-6 sm:skew-y-0 sm:-rotate-6 sm:rounded-3xl")
+      div(class="relative py-10 bg-white shadow-lg sm:rounded-3xl sm:p-20  sm:pt-10")
+        div(class='flex justify-between rounded-t-xl to-light-teal-100 py-2 mb-8')
+          h1.text-xl.flex.items-center.justify-center.font-bold.mx-2.text-light-blue-600= title
+          button(class='p-2 text-white text-sm font-extrabold rounded-md flex items-center justify-center bg-emerald-500 m-2')#refresh Refresh
+        table.table-auto
+          thead 
             tr
-              td(class='border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium')=val['startTime']
-              td(class='border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium')=val['endTime']
-              td(class='border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium')=val['duration']
+              th(class='px-4 py-2 text-light-blue-600') Start 
+              th(class='px-4 py-2 text-light-blue-600') End 
+              th(class='px-4 py-2 text-light-blue-600') TimeOut (in Minute)
+          tbody 
+            each val, key in offTime
+              tr
+                td(class='border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium')=val['startTime']
+                td(class='border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium')=val['endTime']
+                td(class='border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium')=val['duration']
