--- a/node-apps/internet_off_frontend/views/layout.pug
+++ b/node-apps/internet_off_frontend/views/layout.pug
@@ -1,10 +1,10 @@
 doctype html
-html
+html.h-full
   head
     title= title
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.1/tailwind.css')
-  body(class='rounded-t-xl bg-gradient-to-r from-light-blue-50 to-light-blue-100 py-10 w-full mx-auto')
+  body(class='rounded-t-xl cs-body-bg h-full py-10 w-full mx-auto')
     block content
     script(src="/javascripts/refresh.js")
