--- a/node-apps/internet_off_frontend/public/stylesheets/style.css
+++ b/node-apps/internet_off_frontend/public/stylesheets/style.css
@@ -16,13 +16,12 @@
 }
 .from-cyan-400 {
   --tw-gradient-from: #22d3ee;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(34, 211, 238, 0));
+  --tw-gradient-stops: var(--tw-gradient-from),
+    var(--tw-gradient-to, rgba(34, 211, 238, 0));
 }
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
-
-
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
@@ -31,8 +30,6 @@
 .to-transparent {
   --tw-gradient-to: transparent;
 }
-
-
 
 .text-light-blue-600 {
   --tw-text-opacity: 1;
@@ -44,8 +41,11 @@
   border-color: rgba(14, 165, 233, var(--tw-border-opacity));
 }
 
-
 .bg-emerald-500 {
   --tw-bg-opacity: 1;
-  background-color: rgba(16,185,129,var(--tw-bg-opacity));
+  background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+
+.cs-body-bg {
+  background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
 }
